samples/_failures_safe/1761415085_ebef08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56ddad95.c: In function ‘main’:
./samples/SAFE/__tmp_56ddad95.c:139:16: error: missing terminating " character
  139 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_56ddad95.c:139:9: error: expected expression at end of input
  139 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_56ddad95.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_56ddad95.c:139:9: error: expected declaration or statement at end of input
